--- a/app/src/main/res/layout/activity_cwiczenie.xml
+++ b/app/src/main/res/layout/activity_cwiczenie.xml
@@ -7,14 +7,14 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/nazwa_cw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="@font/alfa_slab_one"
-        android:text="PRZYSIAD"
+
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/obraz_cw"
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_marginStart="50dp"
@@ -34,8 +34,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.287"
-        app:srcCompat="@drawable/squad" />
+        app:layout_constraintVertical_bias="0.287" />
 
     <TextView
         android:id="@+id/time_view"
