--- a/app/src/main/res/layout/activity_cwiczenie_slide.xml
+++ b/app/src/main/res/layout/activity_cwiczenie_slide.xml
@@ -20,14 +20,15 @@
         app:layout_constraintVertical_bias="0.131" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/opis_cw"
+
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="80dp"
-        android:text="@string/przysiady"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
